# wormhole

./: .gitignore  2D_lensing.cpp  BLACKHOLE_VS_WORMHOLE.md  CMakeLists.txt  CPU-geodesic.cpp  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  README.md  TESTING.md  WORMHOLE_GUIDE.md  camera_path.txt  geodesic.comp  stb_image_write.h  wormhole.comp  wormhole.cpp  wormhole_geodesic.cpp  wormhole_sim.cpp
vs_code/: launch.json  tasks.json
